[gd_scene load_steps=2 format=3 uid="uid://rmhxeutefyp3"]

[ext_resource type="Script" uid="uid://debjkxixjjk0m" path="res://characters/enemies/enemy_spawner.gd" id="1_ymv5o"]

[node name="EnemySpawner" type="Node3D"]
script = ExtResource("1_ymv5o")

[node name="AutoRemoveTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 60.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="timeout" from="AutoRemoveTimer" to="." method="queue_free"]
[connection signal="timeout" from="SpawnTimer" to="." method="spawn_enemy"]
